# Research_Assistant

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  ProjectIdea.txt  README.md  ROADMAP.md  SECURITY.md  create_pdf.py  pyproject.toml  test_pipeline.py  test_search.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/generated-issues/: 000-INDEX.md  001-fix-path-settings-not-anchored-to-repo-root.md  002-fix-workspace-name-collision-from-title-truncation.md  003-handle-errors-after-successful-indexing-in-process-paper.md  004-add-wal-mode-to-workspacemanager-sqlite.md  005-bound-active-sessions-with-lru-eviction.md  006-validate-searchquery-limit-bounds.md  007-typed-response-model-for-workspace-papers.md  008-constrain-chatmessage-difficulty-values.md  009-reuse-persistent-httpx-client-semantic-scholar.md  01-api-search-accepts-an-unbounded-limit-letting-one-request-fo.md  010-add-pagination-to-workspace-list-endpoints.md  011-add-get-paper-by-id-endpoint.md  012-add-ssrf-host-allowlist-to-pdfdownloader.md  013-add-missing-docstrings-to-fastapi-endpoints.md  014-background-async-pdf-indexing.md  015-expose-streaming-chat-endpoint.md  016-wire-planner-agent-into-endpoint.md  017-persist-workspacechatstore-to-sqlite.md  018-add-basic-api-authentication.md  019-add-per-ip-rate-limiting-middleware.md  02-get-api-workspaces-id-papers-declares-response-model-list-an.md  020-add-openalex-search-provider.md  021-add-crossref-search-provider.md  022-build-multi-paper-comparison-agent.md  023-build-learning-roadmap-generator.md  024-build-quiz-generator.md  025-move-api-base-url-to-env-variable.md  026-fix-papersummary-refresh-deep-link.md  027-add-aria-label-to-search-input.md  028-add-label-to-workspace-name-input.md  029-wire-up-workspace-delete-button.md  03-auto-created-single-paper-workspace-names-can-collide-betwee.md  030-fix-dead-click-affordance-discoveryfeed-cards.md  031-fix-or-remove-dead-view-all-link.md  032-auto-scroll-chat-to-newest-message.md  033-add-difficulty-selector-to-chat-ui.md  034-add-debounce-to-search-input.md  035-add-error-boundary-around-routed-app.md  036-extract-shared-chatpanel-component.md  (+66 more)
.github/workflows/: lint.yml  tests.yml
frontend/: index.html  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AnswerMessage.tsx  DiscoveryFeed.tsx  Layout.tsx  PaperSummary.tsx  ResearchLibrary.tsx  WorkspaceDetail.tsx
frontend/src/components/splash/: BeginButton.tsx  RibbonEngine.ts  SplashScreen.tsx  ambientSound.ts  splash.css
frontend/src/context/: AgentActivityContext.tsx  ThemeContext.tsx
src/app/: api.py  templates.html  utils.py
src/paperpilot/: __init__.py  config.py  net.py  pipeline.py
src/paperpilot/agent/: __init__.py  comparison.py  critic.py  formatting.py  planner.py  tutor.py
src/paperpilot/core/: __init__.py  models.py
src/paperpilot/document/: __init__.py  chunker.py  downloader.py  extractor.py
src/paperpilot/graph/: __init__.py  builder.py  nodes.py  state.py
src/paperpilot/llm/: __init__.py  factory.py
src/paperpilot/retrieval/: __init__.py  embedder.py  vector_store.py
src/paperpilot/search/: __init__.py  agent.py  availability.py  providers.py  ranker.py  rate_limit.py
src/paperpilot/services/: __init__.py  comparison.py  grounded_qa.py  summarizer.py
src/paperpilot/services/paper_chat/: __init__.py  exceptions.py  indexing.py  ingestion.py  query.py  session.py  storage.py
src/paperpilot/workspace/: __init__.py  manager.py
tests/: __init__.py  test_api.py  test_availability.py  test_chat_store.py  test_chunker.py  test_comparison.py  test_critic.py  test_downloader.py  test_embedder.py  test_extractor.py  test_graph_flow.py  test_graph_integration.py  test_grounded_qa.py  test_llm_factory.py  test_metadata_sync.py  test_models.py  test_net.py  test_paper_chat.py  test_pipeline.py  test_pipeline_rag.py  test_planner.py  test_providers.py  test_ranker.py  test_rate_limit.py  test_search_agent.py  test_summarizer.py  test_tutor.py  test_vector_store.py  test_workspace.py  test_workspace_pipeline.py
