[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperpilot"
version = "0.1.0"
description = "An autonomous multi-agent research assistant for discovering, understanding, and learning research papers."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pymupdf>=1.24,<2.0",
    "python-dotenv>=1.0,<2.0",
    "sentence-transformers>=3.0,<4.0",
    "faiss-cpu>=1.8,<2.0",
    "numpy>=1.26,<3.0",
    "langchain-core>=0.2,<0.4",
    "langchain-openai>=0.1,<0.3",
    "arxiv>=2.1,<3.0",
    "langgraph>=0.1.0,<0.3.0",
    "fastapi>=0.100,<1.0",
    "uvicorn>=0.23,<1.0",
    "llama-index>=0.10.0",
    "llama-index-core>=0.10.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paperpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
