[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperpilot"
version = "0.1.0"
description = "An autonomous multi-agent research assistant for discovering, understanding, and learning research papers."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pymupdf>=1.24,<2.0",
    "python-dotenv>=1.0,<2.0",
    "sentence-transformers>=3.0,<4.0",
    "faiss-cpu>=1.8,<2.0",
    "numpy>=1.26,<3.0",
    "langchain-core>=0.2,<0.4",
    "langchain-openai>=0.1,<0.3",
    "arxiv>=2.1,<3.0",
    "langgraph>=0.1.0,<0.3.0",
    "fastapi>=0.100,<1.0",
    "uvicorn>=0.23,<1.0",
    "llama-index>=0.10.0",
    "llama-index-core>=0.10.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "langchain-groq>=0.1.0",
    # google-genai wraps Google's current unified SDK; llms-gemini wraps the
    # retired google.generativeai package and is only a fallback (see
    # paperpilot/llm/factory.py::_llama_gemini).
    "llama-index-llms-google-genai>=0.1.0",
    "llama-index-llms-gemini>=0.1.0",
    "llama-index-llms-groq>=0.1.0",
    # Verify TLS against the OS trust store — required on machines whose
    # antivirus/proxy intercepts TLS (see paperpilot/net.py).
    "truststore>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paperpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
# Match the project's minimum supported interpreter.
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
# Default rule set (pyflakes + a curated slice of pycodestyle). Kept
# deliberately lean so the baseline is green for contributors on day one;
# tighten by adding rule codes (e.g. "I" for import sorting, "UP" for pyupgrade)
# in a focused follow-up rather than dumping a wall of violations on the first PR.
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
# app/api.py intentionally imports after calling paperpilot.net setup, which
# must run before anything opens a TLS connection or loads a model (see
# CLAUDE.md §2 and the module's own comments). E402 is expected here.
"src/app/api.py" = ["E402"]
